# class_agents_assignment_q3

career_mentor_agent/: .gitignore  README.md  main.py  multy_agents.py  pyproject.toml
game_master_change/: .gitignore  README.md  main.py  multy_agents.py  pyproject.toml  tools.py
game_master_change/src/game_master_change/: __init__.py
traveller_designer_agent_v2/: README.md  main.py  pyproject.toml
traveller_designer_agent_v2/src/traveller_designer_agent/: __init__.py
